improve swagger, refactor code
